--- a/client/src/pages/sufiyan/pages/nestedPages/Sidebar.css
+++ b/client/src/pages/sufiyan/pages/nestedPages/Sidebar.css
@@ -46,6 +46,7 @@
   .profile {
     display: flex;
     align-items: center;
+    justify-content: center;
     border-radius: 50%;
     margin-bottom: 1rem;
   }
