--- a/client/src/pages/monu/styles/LandingPage.css
+++ b/client/src/pages/monu/styles/LandingPage.css
@@ -171,9 +171,11 @@ position: relative;
     transform: scale(1.2);
   }
   .lisa:hover .overlay2{
-       height: 20%;
+       height: 25%;
        bottom: 0px;
+       left:0;
        cursor: pointer;
+       padding-top: 10px;
   }
 .overlay2 {
     position: absolute;
@@ -185,8 +187,6 @@ position: relative;
     width: 100%;
     height: 0;
     transition: 0.5s ease;
-    display: grid;
-    place-items: center;
   }
 
   .social{
